yaml/simplesignal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplesignal
  labels:
    app: simplesignal
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.simplesignal.co.uk"
spec:
  type: NodePort
  selector:
    app: simplesignal
  ports:
    - port: 8000
      targetPort: 8000
