yaml/simplesignal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simplesignal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.simplesignal.co.uk
    secretName: simplesignal-tls
  rules:
  - host: www.simplesignal.co.uk
    http:
      paths:
      - backend:
          serviceName: simplesignal
          servicePort: 8000
